<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="419dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="67dp"
        android:gravity="center"
        android:text="@string/welcome_to_my_chat_app"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/start_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:text="@string/need_a_new_account"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/start_login_btn"
        app:layout_constraintTop_toBottomOf="@+id/start_login_btn" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/already_have_account"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/start_reg_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>